WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205391
Style::Invalidator should be able to invalidate using multiple RuleSets in one pass
https://bugs.webkit.org/show_bug.cgi?id=205391
Summary
Style::Invalidator should be able to invalidate using multiple RuleSets in on...
Antti Koivisto
Reported
2019-12-18 06:18:11 PST
Avoid repeated DOM traversals
Attachments
patch
(13.35 KB, patch)
2019-12-18 06:27 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(13.87 KB, patch)
2019-12-18 06:57 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-12-18 06:27:22 PST
Created
attachment 385966
[details]
patch
Antti Koivisto
Comment 2
2019-12-18 06:57:16 PST
Created
attachment 385968
[details]
patch
WebKit Commit Bot
Comment 3
2019-12-18 09:22:44 PST
Comment on
attachment 385968
[details]
patch Clearing flags on attachment: 385968 Committed
r253690
: <
https://trac.webkit.org/changeset/253690
>
WebKit Commit Bot
Comment 4
2019-12-18 09:22:45 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-12-18 09:23:23 PST
<
rdar://problem/58045177
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug