Style::Invalidator should be able to invalidate using multiple RuleSets in one pass https://bugs.webkit.org/show_bug.cgi?id=205391

Reviewed by Zalan Bujtas.

It is inefficient to do multiple passes over DOM if there are multiple RuleSets to invalidate with.

* style/AttributeChangeInvalidation.cpp:
(WebCore::Style::AttributeChangeInvalidation::invalidateStyle):

Collect to a HashMap per MatchElement.

(WebCore::Style::AttributeChangeInvalidation::invalidateStyleWithRuleSets):

Call to common invalidation function in Style::Invalidator.

* style/AttributeChangeInvalidation.h:
* style/ClassChangeInvalidation.cpp:
(WebCore::Style::ClassChangeInvalidation::computeInvalidation):
(WebCore::Style::ClassChangeInvalidation::invalidateStyleWithRuleSets):

Same for classes.

* style/ClassChangeInvalidation.h:
* style/StyleInvalidator.cpp:
(WebCore::Style::Invalidator::Invalidator):

Take a Vector of RuleSets.

(WebCore::Style::Invalidator::invalidateIfNeeded):

Loop as needed.

(WebCore::Style::Invalidator::invalidateStyle):
(WebCore::Style::Invalidator::invalidateInShadowTreeIfNeeded):
(WebCore::Style::Invalidator::invalidateWithMatchElementRuleSets):

Factor the invalidation loop and HashMap to Invalidator.

* style/StyleInvalidator.h:


Canonical link: https://commits.webkit.org/218594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253690 268f45cc-cd09-0410-ab3c-d52691b4dbfc